--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "esLint server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "assets": "webpack -w --display-max-modules 0",
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +22,11 @@
   "homepage": "https://github.com/guillemurano/DrawingCardsApi#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.3",
-    "mongodb": "^2.2.27"
+    "mongodb": "^2.2.27",
+    "request": "^2.83.0",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
