--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.3",
+    "iconv-lite": "^0.4.19",
     "mongodb": "^2.2.27",
     "request": "^2.83.0",
+    "scrape-it": "^4.0.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
